Sign up CSS done

--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,15 +1,3 @@
-.bgcolor-dashboard{
-    background-color: theme('colors.midnight')
-}
-
-.text-color-login{
-    color : theme('colors.white')
-}
-
-.btn-color-login{
-    background-color: theme('colors.lightblue')
-}
-
-.text-color{
-    color: theme('colors.midnight')
+.card-center{
+    margin: 0 auto;
 }
